--- a/index.html
+++ b/index.html
@@ -5,8 +5,23 @@
   <title>Giant space moths invade Earth</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,700" rel="stylesheet">
 </head>
 <body>
+  <header class="banner">
 
+    <div class="banner-title">
+      <h2>Giant space moths invade Earth</h2>
+    </div>
+
+    <div class="banner-body">
+      <p>Our friendly giant, nuclear radiated lizard steps up to battle against the nefarious space moths</p>
+    </div>
+
+    <div class="img-flex">
+      <img src="images/placeholder-16by9.svg" alt="">
+    </div>
+
+  </header>
 </body>
 </html>
