--- a/index.html
+++ b/index.html
@@ -8,20 +8,18 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,700" rel="stylesheet">
 </head>
 <body>
-  <header class="banner">
+  <div class="banner">
 
-    <div class="banner-title">
-      <h2>Giant space moths invade Earth</h2>
+    <div class="content">
+      <h2 class="title">Giant space moths</h2>
+      <h2 class="title">invade Earth</h2>
+      <p class="text">Our friendly giant, nuclear radiated lizard steps up to battle against the nefarious space moths</p>
     </div>
 
-    <div class="banner-body">
-      <p>Our friendly giant, nuclear radiated lizard steps up to battle against the nefarious space moths</p>
+    <div class="img">
+      <img class="img-flex" src="images/placeholder-16by9.svg" alt="">
     </div>
 
-    <div class="img-flex">
-      <img src="images/placeholder-16by9.svg" alt="">
-    </div>
-
-  </header>
+  </div>
 </body>
 </html>
